// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRowHeader header for contributor editor control with all options 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <br />
  Step 2 - Select your name from the list below
  <li
    class="MuiListItem-container css-xw6fwh-MuiListItem-container"
  >
    <div
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-d43oe-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PeopleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-3 css-vahuxy-MuiGridLegacy-root"
        >
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
            >
              Name as published
            </span>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-4 css-1tmlgzn-MuiGridLegacy-root"
        >
          <div
            class="MuiListItemText-root css-y2splu-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
            >
              UQ identifier / Organisation
            </span>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-4 css-vgxmiq-MuiGridLegacy-root"
        />
      </div>
      <div
        class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
      >
        <div
          class="MuiListItemText-root css-12763ss-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
          >
            Reorder records
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
    >
      <span
        aria-label="Remove all records"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          aria-label="Remove all records"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteForeverIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
        </button>
      </span>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRowHeader header for contributor editor control with delete all disabled 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-container css-xw6fwh-MuiListItem-container"
  >
    <div
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-d43oe-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PeopleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-3 css-vahuxy-MuiGridLegacy-root"
        >
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
            >
              Name as published
            </span>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-4 css-vgxmiq-MuiGridLegacy-root"
        />
      </div>
      <div
        class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
      >
        <div
          class="MuiListItemText-root css-12763ss-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
          >
            Reorder records
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
    >
      <span
        aria-label="Remove all records"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          aria-label="Remove all records"
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteForeverIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
        </button>
      </span>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRowHeader header for contributor editor control with name and delete all button only 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-container css-xw6fwh-MuiListItem-container"
  >
    <div
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-d43oe-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PeopleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-3 css-vahuxy-MuiGridLegacy-root"
        >
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
            >
              Name as published
            </span>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-4 css-vgxmiq-MuiGridLegacy-root"
        />
      </div>
      <div
        class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
      >
        <div
          class="MuiListItemText-root css-12763ss-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
          >
            Reorder records
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
    >
      <span
        aria-label="Remove all records"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          aria-label="Remove all records"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteForeverIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
        </button>
      </span>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRowHeader header for creator role 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-container css-xw6fwh-MuiListItem-container"
  >
    <div
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-d43oe-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PeopleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-3 css-vahuxy-MuiGridLegacy-root"
        >
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
            >
              Name as published
            </span>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-4 css-vgxmiq-MuiGridLegacy-root"
        >
          <div
            class="MuiListItemText-root css-y2splu-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
            >
              Role
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
      >
        <div
          class="MuiListItemText-root css-12763ss-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
          >
            Reorder records
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
    >
      <span
        aria-label="Remove all records"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          aria-label="Remove all records"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteForeverIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
        </button>
      </span>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRowHeader should display infinite class 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-container css-xw6fwh-MuiListItem-container"
  >
    <div
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-d43oe-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PeopleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-3 css-vahuxy-MuiGridLegacy-root"
        >
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
            >
              Name as published
            </span>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-4 css-vgxmiq-MuiGridLegacy-root"
        />
      </div>
      <div
        class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
      >
        <div
          class="MuiListItemText-root css-1ojqf4x-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
          >
            Reorder records
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
    >
      <span
        aria-label="Remove all records"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          aria-label="Remove all records"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteForeverIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
        </button>
      </span>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRowHeader should use extra padding if row is editable 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-container css-xw6fwh-MuiListItem-container"
  >
    <div
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-d43oe-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PeopleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-3 css-vahuxy-MuiGridLegacy-root"
        >
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
            >
              Name as published
            </span>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-4 css-vgxmiq-MuiGridLegacy-root"
        />
      </div>
      <div
        class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
      >
        <div
          class="MuiListItemText-root css-omnkj0-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
          >
            Reorder records
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
    >
      <span
        aria-label="Remove all records"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          aria-label="Remove all records"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteForeverIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
        </button>
      </span>
    </div>
  </li>
</div>
`;

exports[`Component ContributorRowHeader triggers the confirmation box 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-container css-xw6fwh-MuiListItem-container"
  >
    <div
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-secondaryAction css-d43oe-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-m11kn3-MuiListItemIcon-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="PeopleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3m-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3m0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5m8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5"
          />
        </svg>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-3 css-vahuxy-MuiGridLegacy-root"
        >
          <div
            class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
            >
              Name as published
            </span>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 MuiGridLegacy-grid-md-4 css-vgxmiq-MuiGridLegacy-root"
        />
      </div>
      <div
        class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
      >
        <div
          class="MuiListItemText-root css-12763ss-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
          >
            Reorder records
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
    >
      <span
        aria-label="Remove all records"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          aria-label="Remove all records"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="DeleteForeverIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
          </svg>
        </button>
      </span>
    </div>
  </li>
</div>
`;
